--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
         <div class="symbol" onclick="copyText('●')">●</div>
         <div class="symbol" onclick="copyText('（待續）')">（待續）</div>
         <div class="symbol" onclick="copyText('● 范統的事後補述')">● 范統的事後補述</div>
-        <div class="symbol" onclick="copyText('\\n——《【愛藏版】沉月之鑰 第二部 [^\\n]+》\\nReadmoo讀墨電子書\\n?')">\\n——《【愛藏版】沉月之鑰 第二部 [^\\n]+》\\nReadmoo讀墨電子書\\n?</div>
+        <div class="symbol" onclick="copyText('{#}')">{#}</div>
     </div>
 
     <script>
