--- a/index.html
+++ b/index.html
@@ -41,12 +41,12 @@
         <div class="symbol" onclick="copyText('{#}')">{#}</div>
     </div>
 
-    <script>
+   //* <script>
         function copyText(text) {
             navigator.clipboard.writeText(text).then(() => {
                 alert('Copied: ' + text);
             });
         }
-    </script>
+    </script> *//
 </body>
 </html>
