--- a/index.html
+++ b/index.html
@@ -42,7 +42,8 @@
         <div class="symbol" onclick="copyText('※')">※</div>
         <div class="symbol" onclick="copyText('◎')">◎</div>
         <div class="symbol" onclick="copyText('●')">●</div>
-        <div class="symbol" onclick="copyText('Translate')">Translate</div>
+        <div class="symbol" onclick="copyText('Translate into English.')">Translate</div>
+        <div class="symbol" onclick="copyText('Italicize lines with 『』')">Translate</div>
         <div class="symbol" onclick="copyText('（待續）')">（待續）</div>
         <div class="symbol" onclick="copyText('● 范統的事後補述')">● 范統的事後補述</div>
         <div class="symbol" onclick="copyText('{#}')">{#}</div>
