--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
         <div class="symbol" onclick="copyText('（待續）')">（待續）</div>
         <div class="symbol" onclick="copyText('● 范統的事後補述')">● 范統的事後補述</div>
         <div class="symbol" onclick="copyText('{#}')">{#}</div>
-        <div class="symbol" onclick="copyText('{──}')">{──}</div>
+        <div class="symbol" onclick="copyText('──')">──</div>
         <div class="notification" id="notification">Copied to clipboard!</div>
     </div>
 
