--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
         <div class="symbol" onclick="copyText('◎')">◎</div>
         <div class="symbol" onclick="copyText('●')">●</div>
         <div class="symbol" onclick="copyText('Translate into English.')">Translate</div>
-        <div class="symbol" onclick="copyText('Italicize lines with 『』')">Translate</div>
+        <div class="symbol" onclick="copyText('Italicize lines with 『』')">Italicize lines with 『』</div>
         <div class="symbol" onclick="copyText('（待續）')">（待續）</div>
         <div class="symbol" onclick="copyText('的事後補述')">的事後補述</div>
         <div class="symbol" onclick="copyText('{#}')">{#}</div>
