--- a/index.html
+++ b/index.html
@@ -42,7 +42,9 @@
         <div class="symbol" onclick="copyText('※')">※</div>
         <div class="symbol" onclick="copyText('◎')">◎</div>
         <div class="symbol" onclick="copyText('●')">●</div>
-        <div class="symbol" onclick="copyText('Translate into English.')">Translate</div>
+        <div class="symbol" onclick="copyText('Translate into English:')">Translate  into English:</div>
+       <div class="symbol" onclick="copyText('Translate:')">Translate:</div>
+
         <div class="symbol" onclick="copyText('Bold lines with 『』')">Bold lines with 『』</div>
         <div class="symbol" onclick="copyText('（待續）')">（待續）</div>
         <div class="symbol" onclick="copyText('的事後補述')">的事後補述</div>
